# tdd

./: README.md
satmath-ceedling/: project.yml
satmath-ceedling/include/: satmath.h  satmath_core.h
satmath-ceedling/src/: satmath.c  satmath_core.c
satmath-ceedling/test/: test_satmath.c  test_satmath_core.c
satmath-cmocka/: CMakeLists.txt
satmath-cmocka/include/: satmath.h
satmath-cmocka/src/: satmath.c  satmath_core.c
satmath-cmocka/test/: utils.h
satmath-cmocka/test/mocks/: mock__satmath_core.c
satmath-cmocka/test/utest/: test__satmath.c  test__satmath_core.c
